Fix collision in level 1 dungeon tile assets.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -36,9 +36,9 @@ application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
-application/product_version="0.1"
+application/product_version="0.2"
 application/company_name="SCHMEBs"
-application/product_name="Apathy"
+application/product_name="DungeonsOfApathy"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -60,3 +60,6 @@ Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorActi
 ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
+dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=false
+dotnet/embed_build_outputs=false
